# inv_aki_flask

./: .gitignore  README.md  api_key.txt  app.yaml  deploy.sh  pyproject.toml  tox.ini
inv_aki_flask/: app.py
inv_aki_flask/lib/: keyword_list.tsv  keyword_list_easy.tsv
inv_aki_flask/lib/prompt/: template_answer.txt  template_judge.txt  template_select.txt
inv_aki_flask/model/: chatgpt.py  datastore_client.py  dialog.py  inner_session.py  secret_client.py
inv_aki_flask/model/datastore_client/: common.py  message.py  report.py  session.py
inv_aki_flask/static/: style.css
inv_aki_flask/static/css/: style.css
inv_aki_flask/templates/: dialog.html  index.html  layout.html  login.html  main.html  ranking.html  result.html
inv_aki_flask/views/: index.py  login.py  main.py  ranking.py  result.py
lib/prompt/: template_answer.txt
tests/: test_chatgpt.py
